Większe przyciski na prototypie  (#1002)
Zwiększamy przydatność prototypu planu na małych ekranach. Jego główną wadą były zbyt małe przyciski do podejmowania akcji (przypinanie, zapisywanie).

Zmiana składa się z trzech elementów:

1. Zamiana starych ikon, które były grafikami 12x12 pikseli, na ikony z Font Awesome.
2. Różny sposób wyświetlania ich na dużych i małych ekranach.
3. Poprawione rozpoznawanie, że należy schować przyciski (rozpoznawanie, że Term stracił focus na ekranach dotykowych).

--- a/zapisy/apps/enrollment/timetable/templates/timetable/prototype.html
+++ b/zapisy/apps/enrollment/timetable/templates/timetable/prototype.html
@@ -44,28 +44,36 @@
         </ul>
         <ul class="schedule-legend">
             <li>
-                <span class="legend-box pin"></span> — Przypina do prototypu.
+                <span class="legend-box">
+                    <i class="fa fa-thumbtack fa-rotate-90 fa-fw"></i>
+                </span> — Przypina do prototypu.
                 Widoczność grupy w prototypie zostaje zapamiętana. Przycisk
                 <strong>nie zapisuje</strong> na zajęcia.
             </li>
             <li>
-                <span class="legend-box unpin"></span> — Odpina od prototypu.
+                <span class="legend-box">
+                    <i class="fa fa-thumbtack fa-fw" data-fa-transform="rotate-45"></i>
+                </span> — Odpina od prototypu.
                 Przywraca domyślną widoczność grupy w prototypie. Przycisk
                 <strong>nie wypisuje</strong> z zajęć.
             </li>
             <li>
-                <span class="legend-box enqueue"></span> — Zapisuje do kolejki.
+                <span class="legend-box">
+                    <i class="fa fa-pencil-alt fa-fw"></i>
+                </span> — Zapisuje do kolejki.
                 Jak tylko w grupie będzie wolne miejsce (być może natychmiast),
                 studenci z przodu kolejki zostaną do niej wciągnięci przez
                 asynchroniczny proces.
             </li>
             <li>
-                <span class="legend-box dequeue"></span> — Wypisuje z grupy lub
+                <span class="legend-box">
+                    <i class="fa fa-ban fa-fw"></i>
+                </span> — Wypisuje z grupy lub
                 jej kolejki.
             </li>
             <li>
-                <span class="legend-box auto-enrollment">
-                    <i class="fa fa-car-side" data-fa-transform="shrink-3 left-2"></i>
+                <span class="legend-box">
+                    <i class="fa fa-car-side fa-fw"></i>
                 </span> — Grupa z auto-zapisem. Stan tej grupy jest automatycznie synchronizowany z
                 innymi grupami tego przedmiotu. Zapisz się do innych grup, a automatycznie się w niej
                 znajdziesz.
