--- a/zapisy/apps/defect/templates/defectMain.html
+++ b/zapisy/apps/defect/templates/defectMain.html
@@ -5,18 +5,16 @@
 
 {% block main-subtitle %}System raportowania usterek{% endblock %}
 
-{% block theses_active %} class="active"{% endblock %}
-
 {% block all-content %}
-<div id="defect-root">
     <div class="d-flex justify-content-between align-items-center">
-        <h1 class="d-inline-block">
-            Dodawanie nowej usterki
-        </h1>
-    </div>
-    <form method="POST" class="post-form">
-        {% csrf_token %}
-        {% crispy form %}
-    </form>
+    <h1 class="d-inline-block">
+        Usterki
+    </h1>
+	<a href="{% url 'defects:new' %}" class="btn btn-primary" role="button">Dodaj nową usterkę</a>
+
+</div>
+
+<div id="defect-root">
+
 </div>
 {% endblock %}
