feat: add defect list

--- a/zapisy/apps/defect/templates/addDefect.html
+++ b/zapisy/apps/defect/templates/addDefect.html
@@ -1,11 +1,6 @@
-{% extends "base.html" %}
-{% load render_bundle from webpack_loader %}
+{% extends "defectBase.html" %}
 
 {% load crispy_forms_tags %}
-
-{% block main-subtitle %}System raportowania usterek{% endblock %}
-
-{% block theses_active %} class="active"{% endblock %}
 
 {% block all-content %}
 <div id="defect-root">
