--- a/zapisy/apps/defect/templates/showDefect.html
+++ b/zapisy/apps/defect/templates/showDefect.html
@@ -4,5 +4,54 @@
 
 
 {% block all-content %}
-There will be defect shown for id: {{ id }}
+    <div class="d-flex justify-content-between align-items-center">
+        <h1 class="d-inline-block">
+            {{ defect.name }}
+        </h1>
+        <div class="ml-2 d-flex align-items-center justify-content-end flex-wrap">
+            <div class="d-inline-block mb-3 ml-1">
+                <a class="btn btn-sm btn-outline-info" href="{% url 'defects:edit_defect' defect.id %}">
+                    Edytuj
+                </a>
+            </div>
+        </div>
+    </div>
+    <table class="table table-bordered table-md-responsive d-print-none" id="table-info">
+        <colgroup>
+            <col class="table-info-type"></col>
+        </colgroup>
+        <tbody>
+        <tr>
+            <th scope="row" style="width: 50%">Miejsce</th>
+            <td>
+                {{ defect.place }}
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">Zgłoszone przez</th>
+            <td>{% if defect.reporter %}
+                {{ defect.reporter }}
+            {% else %}
+                Brak
+            {% endif %}
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">Stan</th>
+            <td>
+                {{ defect.get_state_display }}
+            </td>
+        </tr>
+        <tr>
+            <th scope="row">Data dodania</th>
+            <td>{{ defect.creation_date }}</td>
+        </tr>
+        <tr>
+            <th scope="row">Data aktualizacji</th>
+            <td>{{ defect.last_modification }}</td>
+        </tr>
+        </tbody>
+    </table>
+    <h2>Opis usterki</h2>
+    {{ defect.description }}
 {% endblock %}
