--- a/zapisy/apps/defect/templates/createDefectWithImages.html
+++ b/zapisy/apps/defect/templates/createDefectWithImages.html
@@ -1,6 +1,11 @@
 {% extends "defectBase.html" %}
-
+{% load render_bundle from webpack_loader %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block js %}
+{% render_bundle "defect-form" %}
+{% endblock %}
 
 {% block all-content %}
 <div id="defect-root">
@@ -10,47 +15,26 @@
         </h1>
     </div>
 
-    <form action="" method="POST" class="post-form" enctype="multipart/form-data">
+    <input id="extra-images-number" class="d-none" value="{{ extra_images_number }}">
+    <form action="" method="POST" class="post-form" enctype="multipart/form-data" id="main-form">
         {% csrf_token %}
         {% crispy form %}
 
-        <table class="table">
-            {{ photos.management_form }}
-
-            {% for form in photos.forms %}
-                {% if forloop.first %}
-                    <thead>
-                    <tr>
-                        {% for field in form.visible_fields %}
-                            <th>{{ field.label|capfirst }}</th>
-                        {% endfor %}
-                    </tr>
-                    </thead>
-                {% endif %}
-                <tr>
-                    {% for field in form.visible_fields %}
-                        <td>
-                            {# Include the hidden fields in the form #}
-                            {% if forloop.first %}
-                                {% for hidden in form.hidden_fields %}
-                                    {{ hidden }}
-                                {% endfor %}
-                            {% endif %}
-                            {{ field.errors.as_ul }}
-                            {{ field }}
-                        </td>
-                    {% endfor %}
-                </tr>
+        <div id="term-formset" class="mb-5">
+            {{ formset.management_form }}
+            {% for image_form in formset %}
+                {% crispy image_form %}
             {% endfor %}
-        </table>
+            <button class="btn btn-primary" id="new-image-form">Dodaj nowe zdjęcie</button>
+        </div>
+
+        <hr>
+        <button type="submit" class="save btn btn-success mt-3" id="save-defect">Zapisz</button>
     </form>
 </div>
-<script type="text/javascript">
-    $('.formset_row').formset({
-        addText: 'add photo',
-        deleteText: 'remove',
-        prefix: 'image_set'
-    });
-</script>
 
+{% endblock %}
+
+{% block rendered_bundles %}
+    {% render_bundle 'schedule-reservation-widget' %} <!-- TODO change this -->
 {% endblock %}
