Trwałe filtry wyszukiwania (#1129)
Trwałe filtry wyszukiwania (patrz https://github.com/iiuni/projektzapisy/issues/1024)

Opis problemu, rozważone oraz wybrane rozwiązanie są opisane w https://hackmd.io/6tclhbJnQVq4d9TF2iwNMg.

Lista zadań i powiązanych PRów:
- [x] https://github.com/iiuni/projektzapisy/pull/1122 (rodzaj, opiekun przedmiotu, semestr, status propozycji) ,
- [x] https://github.com/iiuni/projektzapisy/pull/1123 (tagi oraz efekty kształcenia),
- [x] https://github.com/iiuni/projektzapisy/pull/1133 (nazwa przedmiotu),
- [x] https://github.com/iiuni/projektzapisy/pull/1132 (zalecane dla pierwszego roku),
- [x] https://github.com/iiuni/projektzapisy/pull/1143,
- [x] https://github.com/iiuni/projektzapisy/pull/1124,
- [x] https://github.com/iiuni/projektzapisy/pull/1139

Co-authored-by: Łukasz Orawiec <58004501+lukasz05@users.noreply.github.com>

--- a/zapisy/apps/enrollment/courses/templates/courses/base.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/base.html
@@ -15,7 +15,7 @@
             
             <div class="dropdown-menu" aria-labelledby="semester-dropdown">
                 {% for semester in all_semesters %}
-                <a class="dropdown-item" href={% url 'courses-semester' semester.pk %}>{{ semester }}</a>
+                <a class="dropdown-item semester-link" href={% url 'courses-semester' semester.pk %}>{{ semester }}</a>
                 {% endfor %}
             </div>
         </div>
