--- a/zapisy/apps/defect/templates/showDefect.html
+++ b/zapisy/apps/defect/templates/showDefect.html
@@ -7,6 +7,10 @@
     {% render_bundle "defect-style" %}
 {% endblock %}
 
+{% block js %}
+    {% render_bundle "show-defect" %}
+{% endblock %}
+
 {% block main-subtitle %}System raportowania usterek{% endblock %}
 
 
@@ -64,8 +68,25 @@
 
     <hr>
 
-    {% for image_url in image_urls %}
-        <img class="defect-image" src={{ image_url }} >
-    {% endfor %}
+    <div class="container-fluid">
+        <div class="row">
+            {% for image_url in image_urls %}
+                <div class="col-md-3 pop center-block">
+                    <img class="img-thumbnail center-block" src={{ image_url }} >
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-body" style="padding: 0">
+                    <button type="button" class="close" data-dismiss="modal" style="padding-right: 3px"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <img src="" class="imagepreview img-responsive" style="width: 100%;" >
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
