--- a/zapisy/apps/defect/templates/defectMain.html
+++ b/zapisy/apps/defect/templates/defectMain.html
@@ -1,6 +1,7 @@
 {% extends "defectBase.html" %}
 
 {% load crispy_forms_tags %}
+{% load render_bundle from webpack_loader %}
 
 {% block styles %}
     <style>
@@ -24,43 +25,55 @@
 {% endblock %}
 
 {% block all-content %}
-    <form method="post" id="action-form">
-    {% csrf_token %}
-    <div class="d-flex justify-content-between align-items-center">
-        <h1 class="d-inline-block">
-            Usterki
-        </h1>
-        <div>
-        <a href="{% url 'defects:new' %}" class="btn btn-primary" role="button">Dodaj nową usterkę</a>
-        <input type="submit" name="print" id="print-form-button" class="btn btn-primary" value="Drukuj">
-        <input type="submit" name="delete" id="delete-form-button" class="btn btn-primary" value="Usuń">
-        <input type="submit" name="done" id="done-form-button" class="btn btn-primary" value="Ustaw jako zrobione">
-        </div>
-    </div>
-    <table class="table table-striped sortable">
-        <thead>
-        <tr id="headers">
-            <th scope="col" class="az" data-defaultsign="nospan" data-defaultsort="asc">Nazwa Usterki</th>
-            <th scope="col" class="text-center">Miejsce usterki</th>
-            <th scope="col" class="text-center">Stan usterki</th>
-            <th scope="col" class="text-center">Data zgłoszenia</th>
-            <th scope="col" class="text-center">Data modyfikacji</th>
-        </tr>
-        </thead>
-            <tbody>
-            {% for defect in defects %}
-                <tr id="{{ defect.id }}">
-                    <td><input type='checkbox' name='names[]' id="defect_checkbox_{{ defect.id }}" value='{{ defect.id }}'> <a href= {% url "defects:show_defect" defect.id %} >{{ defect.name }} </a> </td>
-                    <td class="text-center">{{ defect.place }}</td>
-                    <td class="text-center" style="{{ defect.get_status_color }}">{{ defect.get_state_display }}</td>
-                    <td class="text-center">{{ defect.creation_date }}</td>
-                    <td class="text-center">{{ defect.last_modification }}</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-    </table></form>
 
-    </div>
+    {{ visibleDefects|json_script:"defect-data" }}
+
+    <form method="post" id="action-form">
+        {% csrf_token %}
+        <div class="d-flex justify-content-between align-items-center">
+            <h1 class="d-inline-block">
+                Usterki
+            </h1>
+            <div>
+            <a href="{% url 'defects:new' %}" class="btn btn-primary" role="button">Dodaj nową usterkę</a>
+            <input type="submit" name="print" id="print-form-button" class="btn btn-primary" value="Drukuj">
+            <input type="submit" name="delete" id="delete-form-button" class="btn btn-primary" value="Usuń">
+            <input type="submit" name="done" id="done-form-button" class="btn btn-primary" value="Ustaw jako zrobione">
+            </div>
+        </div>
+
+        <p class="row justify-content-center">
+
+        <div id="defects-filter"></div>
+
+        <p class="row justify-content-center">
+
+        <div id="defects-list"></div>
+
+        <table class="table table-striped sortable">
+            <thead>
+            <tr id="headers">
+                <th scope="col" class="az" data-defaultsign="nospan" data-defaultsort="asc">Nazwa Usterki</th>
+                <th scope="col" class="text-center">Miejsce usterki</th>
+                <th scope="col" class="text-center">Stan usterki</th>
+                <th scope="col" class="text-center">Data zgłoszenia</th>
+                <th scope="col" class="text-center">Data modyfikacji</th>
+            </tr>
+            </thead>
+                <tbody>
+                {% for defect in defects %}
+                    <tr id="{{ defect.id }}">
+                        <td><input type='checkbox' name='names[]' id="defect_checkbox_{{ defect.id }}" value='{{ defect.id }}'> <a href= {% url "defects:show_defect" defect.id %} >{{ defect.name }} </a> </td>
+                        <td class="text-center">{{ defect.place }}</td>
+                        <td class="text-center" style="{{ defect.get_status_color }}">{{ defect.get_state_display }}</td>
+                        <td class="text-center">{{ defect.creation_date }}</td>
+                        <td class="text-center">{{ defect.last_modification }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+        </table>
+    </form>
+
 
     <div id="defect-root">
 
@@ -90,5 +103,9 @@
         $('table a').click(function (e){
             e.stopPropagation()
         })
-    </script>2
+    </script>
+{% endblock %}
+
+{% block rendered_bundles %}
+    {% render_bundle 'defect-widget' %}
 {% endblock %}
