--- a/zapisy/apps/defect/templates/addDefect.html
+++ b/zapisy/apps/defect/templates/addDefect.html
@@ -4,6 +4,10 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block rendered_bundles %}
+    {% render_bundle "defect-style" %}
+{% endblock %}
+
 {% block js %}
     {% render_bundle "defect-form" %}
 {% endblock %}
@@ -34,9 +38,17 @@
             {% if edit %}
                 <div class="container-fluid" style="margin: 10px">
                     <div class="row">
-                        {% for image_url in image_urls %}
+                        {% for image in images %}
                             <div class="col-md-3 pop center-block">
-                                <img class="img-thumbnail" src={{ image_url }} >
+                                <button
+                                    class="btn btn-danger close delete-photo-button"
+                                    type="button"
+                                    id="delete-button-{{ image.0 }}"
+                                >
+                                    <span aria-hidden="true">&times;</span>
+                                    <span class="sr-only">Delete</span>
+                                </button>
+                                <img class="img-thumbnail" src={{ image.1 }} >
                             </div>
                         {% endfor %}
                     </div>
@@ -53,6 +65,16 @@
         <button type="submit" class="save btn btn-success mt-3" id="save-defect">Zapisz</button>
     </form>
 
+    {% if edit %}
+        <div class="d-none">
+            {% for image in images %}
+            <form action="{% url 'defects:delete_image' image.0 %}" method="post" id="delete-form-{{ image.0 }}">
+                {% csrf_token %}
+                <input type="submit" value="Delete" />
+            </form>
+            {% endfor %}
+        </div>
+    {% endif %}
 
 </div>
 
