--- a/zapisy/apps/defect/templates/showDefect.html
+++ b/zapisy/apps/defect/templates/showDefect.html
@@ -82,7 +82,15 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-body" style="padding: 0">
-                    <button type="button" class="close" data-dismiss="modal" style="padding-right: 3px"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <button
+                            type="button"
+                            class="close"
+                            data-dismiss="modal"
+                            style="padding-right: 3px"
+                    >
+                        <span aria-hidden="true">&times;</span>
+                        <span class="sr-only">Close</span>
+                    </button>
                     <img src="" class="imagepreview img-responsive" style="width: 100%;" >
                 </div>
             </div>
