removed top bar from photo modal

--- a/zapisy/apps/defect/templates/showDefect.html
+++ b/zapisy/apps/defect/templates/showDefect.html
@@ -79,18 +79,9 @@
     </div>
 
     <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
-        <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-body" style="padding: 0">
-                    <button
-                            type="button"
-                            class="close"
-                            data-dismiss="modal"
-                            style="padding-right: 3px"
-                    >
-                        <span aria-hidden="true">&times;</span>
-                        <span class="sr-only">Close</span>
-                    </button>
                     <img src="" class="imagepreview img-responsive" style="width: 100%;" >
                 </div>
             </div>
