--- a/zapisy/apps/defect/templates/addDefect.html
+++ b/zapisy/apps/defect/templates/addDefect.html
@@ -12,6 +12,28 @@
     {% render_bundle "defect-form" %}
 {% endblock %}
 
+{% block bread %}
+    <li class="breadcrumb-item">
+        <a href="{% url "main-page" %}">Strona główna</a>
+    </li>
+    <li class="breadcrumb-item">
+        <a href="{% url "defects:main" %}">Usterki</a>
+    </li>
+    {% if edit %}
+        <li class="breadcrumb-item">
+            <a href="{% url "defects:show_defect" defect_id %}">Usterka {{ defect_id }}</a>
+        </li>
+        <li class="breadcrumb-item active">
+            Edytuj
+        </li>
+    {% else %}
+        <li class="breadcrumb-item active">
+            Stwórz nową
+        </li>
+    {% endif %}
+
+{% endblock %}
+
 {% block all-content %}
 <div id="defect-root">
     <div class="d-flex justify-content-between align-items-center">
