--- a/zapisy/apps/defect/templates/defectMain.html
+++ b/zapisy/apps/defect/templates/defectMain.html
@@ -13,6 +13,16 @@
     </style>
 {% endblock %}
 
+{% block bread %}
+    <li class="breadcrumb-item">
+        <a href="{% url "main-page" %}">Strona główna</a>
+    </li>
+
+    <li class="breadcrumb-item active">
+        Usterki
+    </li>
+{% endblock %}
+
 {% block all-content %}
     <form method="post" id="action-form">
     {% csrf_token %}
