--- a/zapisy/apps/defect/templates/showDefect.html
+++ b/zapisy/apps/defect/templates/showDefect.html
@@ -14,6 +14,19 @@
 
 {% block main-subtitle %}System raportowania usterek{% endblock %}
 
+{% block bread %}
+    <li class="breadcrumb-item">
+        <a href="{% url "main-page" %}">Strona główna</a>
+    </li>
+
+    <li class="breadcrumb-item">
+        <a href="{% url "defects:main" %}">Usterki</a>
+    </li>
+
+    <li class="breadcrumb-item active">
+        Usterka {{ defect.id }}
+    </li>
+{% endblock %}
 
 {% block all-content %}
     <div class="d-flex justify-content-between align-items-center">
