Configurable max number of students for theses (#1170)
Resolve issue #1135

Co-authored-by: Bohdan Shcherbak <bogdan.szczerbak@gmail.com>

--- a/zapisy/apps/theses/templates/theses/thesis.html
+++ b/zapisy/apps/theses/templates/theses/thesis.html
@@ -82,6 +82,15 @@
             </td>
         </tr>
         <tr>
+          <th scope="row">Maksymalna liczba studentów</th>
+          <td>{% if thesis.max_number_of_students %}
+                  {{ thesis.max_number_of_students }}
+              {% else %}
+                  Brak
+              {% endif %}
+          </td>
+        </tr>
+        <tr>
             <th scope="row">Studenci</th>
             <td>
                 {% for student in students %}
