--- a/zapisy/templates/base.html
+++ b/zapisy/templates/base.html
@@ -62,6 +62,11 @@
                             <a href="{% url 'theses:main' %}" class="nav-link">Prace dyplomowe</a>
                         </li>
                     {% endif %}
+                    {% if user.employee or user.is_staff %}
+                            <li {% block defect_active %}{% endblock %} class="nav-item">
+                                <a href="{% url 'defects:main' %}" class="nav-link">Usterki</a>
+                            </li>
+                    {% endif %}
                 </ul>
             {% if user.is_authenticated %}
                 <div class="navbar-nav ml-auto">
