Podstrona z wymaganiami oraz zrealizowanymi efektami (#1178)
Dodaliśmy podstronę `Moje studia` z wymaganiami studiów dla studentów. Wyświetlają się tam potrzebne punkty, przedmioty i efekty potrzebne do zaliczenia konkretnego trybu studiów. Wyświetla się również postęp studenta w danym trybie (jego punkty, zaliczone przedmioty itd.). Jeśli preferowany tryb studiów oraz rok rozpoczęcia studiów się nie zgadza to student może wybrać inny tryb i rok z listy.

Wymagania są pobierane z pliku `wymagania.json`. Postęp w realizacji studiów jest wyliczany na podstawie zrealizowanych przedmiotów przez studenta. Ta informacja musi być zsynchronizowana z danymi w USOSie. Student może wybrać co prawda tryb w jakim chce zobaczyć wymagania i postęp studiów, jednakże jedyne przedmioty, które wliczają się do tych wyliczeń to przedmioty zrealizowane podczas programu studiów, który obecnie ma przypisany w Systemie Zapisów.

--- a/zapisy/apps/common/assets/main/index.scss
+++ b/zapisy/apps/common/assets/main/index.scss
@@ -204,3 +204,15 @@ colgroup col.table-info-type {
     transition: transform 250ms;
   }
 }
+
+.check {
+  font-size: 1.5rem;
+}
+
+.green {
+  color: green;
+}
+
+.red {
+  color: red;
+}
