--- a/zapisy/templates/base.html
+++ b/zapisy/templates/base.html
@@ -78,6 +78,11 @@
                         <li class="nav-item">
                             <a href="{% url 'my-profile' %}" class="nav-link">Moje konto</a>
                         </li>
+                        {% if user.student %}
+                        <li class="nav-item">
+                            <a href="{% url 'my-studies' %}" class="nav-link">Moje studia</a>
+                        </li>
+                        {% endif %}
                         {% if user.is_staff %}
                             <li class="nav-item">
                                 <a href="/fereol_admin/" class="nav-link">Admin</a>
