--- a/zapisy/apps/statistics/templates/statistics/groups_list.html
+++ b/zapisy/apps/statistics/templates/statistics/groups_list.html
@@ -6,44 +6,109 @@
 {% block statistics-groups-active %}active{% endblock %}
 
 {% block statistics-content %}
+
+<script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+
+<style>
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+</style>
+
+
+
+<label id="label_filter"> Filter OFF </label>
+
+<label class="switch">
+  <input type="checkbox" id="slider" onclick="filter()">
+  <span class="slider round"></span>
+</label>
+
+
 <div class="table-responsive">
 
     {% regroup groups by course as courses_list %}
 
-    <table class="table table-striped">
+    <table id="mytab" class="table table-striped sortable">
         <thead class="text-muted">
             <tr>
+            	<th scope="col">Przedmiot</th>
                 <th scope="col">Prowadzący</th>
                 <th scope="col">Typ</th>
                 <th scope="col">Miejsca</th>
                 <th scope="col">Zapisani</th>
                 <th scope="col">Kolejka</th>
+                <th scope="col">Niezapisani</th>
                 <th scope="col">Przypięci</th>
                 <th></th>
             </tr>
         </thead>
         <tbody>
             {% for course, groups in courses_list %}
-                <tr>
-                    <th colspan="2">
-                        {{ course.name }}
-                    </th>
-                    <td colspan="6">
-                        {% with waiting_course=waiting_students|lookup:course.id %}
-                            {% for course_type in waiting_course %}
-                                <span class="badge badge-danger" title="Oczekujących w kolejkach">
-                                    {{ course_type|decode_class_type_plural }}
-                                    <span class="badge badge-light">
-                                        {{ waiting_course|lookup:course_type }}
-                                    </span>
-                                </span>
-                            {% endfor %}
-                        {% endwith %}
-                    </td>
-                </tr>
+            
+ 
                 {% for group in groups %}
-                    <tr>
-                        <td>{{ group.teacher }}</td>
+                <tr id='result_tr'>
+                        <td> {{ course.name }} </td>                   
+                        <td>{{group.teacher}}</td>
                         <td>{{ group.get_type_display }}</td>
                         <td>
                             {{ group.limit }}
@@ -56,6 +121,15 @@
                         </td>
                         <td>{{ group.enrolled }}</td>
                         <td>{{ group.queued }}</td>
+                        
+                     <td>
+                        {% with waiting_course=waiting_students|lookup:group.id %}
+                            {% for course_type in waiting_course %}
+                                        {{ waiting_course|lookup:course_type }}
+                            {% endfor %}
+                        {% endwith %}
+                    </td>
+                                              
                         <td>{{ group.pinned }}</td>
                         <td>
                             <a class="badge badge-sm badge-primary"
@@ -65,9 +139,48 @@
                             </a>
                         </td>
                     </tr>
+           
                 {% endfor %}
             {% endfor %}
         </tbody>
     </table>
 </div>
+
+<script>
+
+
+
+document.getElementById("slider").checked=false;
+
+
+function filter(){
+
+var lbl = document.getElementById("label_filter");
+var slid = document.getElementById("slider");
+if(slid.checked==false){
+lbl.innerText="Filter OFF";
+for (let row of mytab.rows) 
+{
+    cell = row.cells[6];
+       if (cell.innerText!=""){
+            
+            row.style.display= 'table-row'; 
+       } 
+}
+}
+else{
+lbl.innerText="Filter ON";
+for (let row of mytab.rows) 
+{
+    cell = row.cells[6];
+       if (cell.innerText==""){
+            
+            row.style.display= 'none'; 
+       } 
+}
+}
+}
+</script>
+
 {% endblock %}
+
