--- a/zapisy/apps/offer/vote/templates/vote/form.html
+++ b/zapisy/apps/offer/vote/templates/vote/form.html
@@ -13,29 +13,10 @@
     <li class="breadcrumb-item active">Głosowanie</li>
 {% endblock %}
 
-
-
 {% block all-content %}
-
-{% block top-content %}
-<script id="courses-data" type="application/json">{{ proposals|safe }}</script>
-<script id="filters-data" type="application/json">{{ filters_json|safe }}</script>
-{% endblock %}
-
-<div id="course-filter"></div>
 
 {# This will be used by Vue component to display currently used points #}
 <div id="point-counter">{{ formset.limit }}</div>
-
-<div id="filtered-courses"></div>
-
-{% block sidebar %}
-    <h3>Przedmioty w ofercie</h3>
-    {%  if request.user.employee %}
-        <a href="{% url 'proposal-form' %}" class="btn btn-success btn-block mb-3">Dodaj nową propozycję przedmiotu</a>
-    {% endif %}
-{% endblock %}
-
 
 <form method="POST">
     {% csrf_token %}
@@ -53,41 +34,35 @@
                 }
             </style>
             {% for form in forms %}
-
                 <tr
                         {% if not form.instance.proposal.course_type.free_in_vote %}
-                            class="limit subject-id-{{form.instance.proposal.id}}"
-                        {% else %}
-                                class="subject-id-{{form.instance.proposal.id}}"
+                            class="limit"
                         {% endif %}
                 >
-
-                        <th scope="row">
-                            {{ form.instance.proposal.name }}
-                            <a href="{% url 'offer-page' form.instance.proposal.slug  %}"
-                                    class="mx-2 font-weight-light" target="new"
-                                    title="Otwórz w nowym oknie">
-                                <i class="fa fa-sm fa-external-link-alt"></i>
-                            </a>
-                            {% if form.instance.proposal.course_type.free_in_vote %}
-                                <small class="text-muted ml-2">Przedmiot darmowy</small>
-                            {% endif %}
-                        </th>
-                        <td>
-                            {{ form|crispy }}
-                        </td>
+                    <th scope="row">
+                        {{ form.instance.proposal.name }}
+                        <a href="{% url 'offer-page' form.instance.proposal.slug  %}" 
+                                class="mx-2 font-weight-light" target="new"
+                                title="Otwórz w nowym oknie">
+                            <i class="fa fa-sm fa-external-link-alt"></i>
+                        </a>
+                        {% if form.instance.proposal.course_type.free_in_vote %}
+                            <small class="text-muted ml-2">Przedmiot darmowy</small>
+                        {% endif %}
+                    </th>
+                    <td>
+                        {{ form|crispy }}
+                    </td>
                 </tr>
             {% endfor %}
             </table>
-        </fieldset>
+        </fieldset>    
     {% endfor %}
+
 
     <button type="submit" class="btn btn-primary">Głosuj</button>
 </form>
 
+{% render_bundle "vote-point-counter" %}
+
 {% endblock all-content %}
-
-
-{% block rendered_bundles %}
-    {% render_bundle "vote-point-counter" %}
-{% endblock %}
